$Id: ChangeLog,v 1.37 2004/04/05 20:04:01 mthuurne Exp $

2004-04-06 Herman Oudejans <hn.oudejans@quicknet.nl>
	* When the configuration dialog is closed with Ok, catapult will
	   now run openmsx -v to make sure all parameter are set properly.
	* If the openmsx executable and/or share directory is changed,
	   catapult tries to restore the previous machine and extensions.	

2004-04-05 Maarten ter Huurne <maarten@treewalker.org>
	* Added "make install".

2004-04-05 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Frameskip works now for openmsx 1198 and higher
	* Minor fixes in the launch script interpreter.

2004-04-04 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Catapult no longer segfaults when it can't find the resources
	* launching openmsx is now script based. Should work faster and
	   more stable.

2004-04-01 Herman Oudejans <hn.oudejans@quicknet.nl>
	* fixed memory leaks

2004-03-31 Herman Oudejans <hn.oudejans@quicknet.nl>
	* openmsx -v is now used to find out openmsx' possibilities
	* fixed a bug when there is not soundhardware available	

2004-03-28 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Fixed linux disk/cart/tape combobox problems
	* Fixed Audio/Video combobox problems
	* Fixed "no audiomixer when no firmware"
	* Fixed more combo problems
	* Accuracies are now asked from openmsx

2004-03-27 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Catapult now sends update enable commands to openmsx
	* Firmware button only available if firmware available on the 
	   current machine

2004-03-26 Herman Oudejans <hn.oudejans@quicknet.nl>
	* Updates for audiocontrol on openmsx now result in update
	   the audiomixer in catapult.
	* Videocontrols with reset button now reset to the first value
	   taken from openmsx.
	* Moved statusinfo to the last tab
	* Firmware should now only be enabled if a machine has it

2004-03-25 Herman Oudejans <hn.oudejans@quicknet.nl>
	* updates from openmsx result now in update to the controls
	   (all but the dynamic audio controls)